# DeviceAccess-EpicsBackend

./: .gitmodules  .rodare.json  CITATION.cff  CMakeLists.txt  README.md
include/: EPICS-Backend.h  EPICS-BackendRegisterAccessor.h  EPICSBackendRegisterAccessor.h  EPICSChannelManager.h  EPICSRegisterInfo.h  EPICSTypes.h  EPICSVersionMapper.h  EPICS_types.h
src/: EPICS-Backend.cc  EPICSChannelManager.cc  EPICSVersionMapper.cc
test/: CMakeLists.txt  read.C  readAsync.C  test.db  test.map  testIOC.C.in  testPauseIOC.C  testUnifiedBackendTest.C
test/DummyIOC/: DummyIOC.h.in
